--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,52 @@
-# Firebase build and deployment files
-/firebase-debug.log
-/firebase-debug.*.log
-.firebaserc
-
-# Firebase Hosting
-/firebase.json
-*.cache
-hosting/.cache
-
-# Firebase Functions
-/functions/node_modules/
-/functions/.env
-/functions/package-lock.json
-
-# Firebase Emulators
-/firebase-*.zip
-/.firebase/
-/emulator-ui/
-
 # Logs
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Environment files (local configs)
-/.env.*
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Firebase
+# Ignore Firebase configuration files with sensitive data
+.firebase/
+.firebaserc
+
+# Firebase emulator data
+firebase-debug.log
+firebase-debug.*.log
+.runtimeconfig.json
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Firebase credentials (if you store them locally)
+serviceAccountKey.json
+credentials.json
+
+# IDE specific Firebase files
+.vscode/launch.json
+.idea/firebase.xml
+
+# OS temporary files
+.tmp
+.temp
+Thumbs.db
